[gd_scene load_steps=13 format=2]

[ext_resource path="res://Asset Packs/Treasure Hunters/Wood and Paper UI/Sprites/Life Bars/Big Bars/3.png" type="Texture" id=1]
[ext_resource path="res://Asset Packs/Treasure Hunters/Wood and Paper UI/Sprites/Life Bars/Big Bars/1.png" type="Texture" id=2]
[ext_resource path="res://Asset Packs/Treasure Hunters/Wood and Paper UI/Sprites/Life Bars/Big Bars/4.png" type="Texture" id=3]
[ext_resource path="res://Asset Packs/Pirate Bomb/Sprites/1-Player-Bomb Guy/1-Idle/1.png" type="Texture" id=4]
[ext_resource path="res://Asset Packs/Treasure Hunters/Wood and Paper UI/Sprites/Life Bars/Colors/1.png" type="Texture" id=5]
[ext_resource path="res://Asset Packs/Pirate Bomb/Sprites/4-Enemy-Big Guy/1-Idle/1.png" type="Texture" id=6]
[ext_resource path="res://Asset Packs/Treasure Hunters/Wood and Paper UI/Sprites/Prefabs/9.png" type="Texture" id=7]
[ext_resource path="res://src/Objects/font_theme.tres" type="Theme" id=8]
[ext_resource path="res://src/Fonts/VT323-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Asset Packs/Treasure Hunters/Wood and Paper UI/Sprites/Prefabs/4.png" type="Texture" id=10]
[ext_resource path="res://src/Objects/PlayAgain.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 9 )

[node name="PlayerHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Player1HealthBar" type="Control" parent="."]
margin_left = 448.0
margin_top = 64.0
margin_right = 832.0
margin_bottom = 160.0
__meta__ = {
"_edit_group_": true
}

[node name="PlayerImage" type="TextureRect" parent="Player1HealthBar"]
margin_top = 8.0
margin_right = 58.0
margin_bottom = 66.0
rect_scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 4 )

[node name="BarImage" type="Control" parent="Player1HealthBar"]
margin_left = 88.0
margin_right = 184.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_group_": true
}

[node name="HealthLeft" type="TextureRect" parent="Player1HealthBar/BarImage"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )

[node name="HealthMiddle" type="TextureRect" parent="Player1HealthBar/BarImage"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="HealthRight" type="TextureRect" parent="Player1HealthBar/BarImage"]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="HealthMeter" type="TextureProgress" parent="Player1HealthBar"]
margin_left = 138.0
margin_top = 40.0
margin_right = 178.0
margin_bottom = 80.0
rect_scale = Vector2( 7.2, 4.6 )
step = -10.0
value = 100.0
texture_progress = ExtResource( 5 )

[node name="Player2HealthBar" type="Control" parent="."]
margin_left = 1024.0
margin_top = 64.0
margin_right = 1408.0
margin_bottom = 160.0
__meta__ = {
"_edit_group_": true
}

[node name="PlayerImage" type="TextureRect" parent="Player2HealthBar"]
margin_right = 77.0
margin_bottom = 74.0
rect_scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 6 )

[node name="BarImage" type="Control" parent="Player2HealthBar"]
margin_left = 88.0
margin_right = 184.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_group_": true
}

[node name="HealthLeft" type="TextureRect" parent="Player2HealthBar/BarImage"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )

[node name="HealthMiddle" type="TextureRect" parent="Player2HealthBar/BarImage"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="HealthRight" type="TextureRect" parent="Player2HealthBar/BarImage"]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="HealthMeter" type="TextureProgress" parent="Player2HealthBar"]
margin_left = 138.0
margin_top = 40.0
margin_right = 178.0
margin_bottom = 80.0
rect_scale = Vector2( 7.2, 4.6 )
step = -10.0
value = 100.0
texture_progress = ExtResource( 5 )

[node name="GameOver" type="Control" parent="."]
visible = false
margin_left = 656.0
margin_top = 288.0
margin_right = 696.0
margin_bottom = 328.0
rect_scale = Vector2( 15, 15 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="GameOver"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )
expand = true

[node name="GameOverText" type="Label" parent="GameOver"]
margin_left = 13.5333
margin_top = 4.46667
margin_right = 51.5333
margin_bottom = 51.4667
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Game
Over"
align = 1
valign = 1

[node name="WinnerText" type="Label" parent="GameOver"]
margin_left = 8.26666
margin_top = 13.0
margin_right = 86.2667
margin_bottom = 60.0
rect_scale = Vector2( 0.3, 0.3 )
theme = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Player 1 Wins"
align = 1
valign = 1

[node name="PlayAgain" type="Label" parent="GameOver"]
margin_left = 12.7331
margin_top = 23.7334
margin_right = 78.7331
margin_bottom = 70.7334
rect_scale = Vector2( 0.2, 0.2 )
theme = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = " Play Again"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="GameOver/PlayAgain"]
pause_mode = 2
show_behind_parent = true
margin_left = -12.332
margin_top = 6.33301
margin_right = 208.668
margin_bottom = 181.333
rect_scale = Vector2( 1.5, 0.6 )
texture_normal = ExtResource( 10 )
script = ExtResource( 11 )

[connection signal="pressed" from="GameOver/PlayAgain/TextureButton" to="GameOver/PlayAgain/TextureButton" method="playAgain"]
